--- a/course.html
+++ b/course.html
@@ -30,7 +30,7 @@
             <h3>دورة التقوية الشاملة</h3>
             <p>دورة تعليمية تستهدف الصفوف من الصف السادس وحتى الصف العاشر</p>
 
-         <h5 class="pri-text">السعر:20$</h5>
+         <!-- <h5 class="pri-text">السعر:20$</h5> -->
         </a>
         </div>
         <div class="course">
