--- a/index.html
+++ b/index.html
@@ -67,7 +67,22 @@
 </div>
 <footer>
 
-  <p>تم تطوير الموقع بواسطة <strong>حسن الجوهان</strong></p>
+ <p>
+صمم الموقع وطور بواسطة 
+  <strong>
+    <a href="mailto:hasanjohan3939@gmail.com" style="
+      color: inherit; 
+      text-decoration: underline; 
+      transition: color 0.3s ease;
+    " 
+    onmouseover="this.style.color='#0f7BFF'" 
+    onmouseout="this.style.color='inherit'">
+      حسن الجوهان
+    </a>
+  </strong>
+</p>
+
+
   
 </footer>
 
