--- a/student.html
+++ b/student.html
@@ -2,12 +2,15 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>طلابنا المتميزون</title>
   <link rel="stylesheet" href="style.css">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">  
 </head>
 <body>
-  <header>طلابنا المتميزون</header>
+  <header>طلابنا المتميزون
+    <i class="fa-solid fa-users-line"></i>
+  </header>
 
   <div class="container-stu">
     <p class="message">لا يوجد الآن</p>
