--- a/register.html
+++ b/register.html
@@ -28,9 +28,10 @@
 
   <div style="cursor: pointer;" class="step " id="step2">
     <h2>الخطوة 2</h2>
-    <p style="font-size: 20px;">دفع الرسوم المطلوبة عبر <strong>شام كاش</strong> (5 دولار للشهر كاملاً) وإعلام المؤسسة
-       <br>
-       بذلك اضغط لعرض التفاصيل</p>
+    <p style="font-size: 20px;">دفع الرسوم المطلوبة عبر <strong>شام كاش</strong> (5 دولار للشهر كاملاً) وإعلام المؤسسة بذلك
+    <br>
+       اضغط لعرض التفاصيل
+    </p>
   </div>
 </div>
 
