--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>home page</title>
+    <title>Document</title>
     <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">  
    <link rel="stylesheet" href="responsive.css">
@@ -17,12 +17,12 @@
     <div class="header"><h3 class="text-eng">
         YOUTH EDUCATIONAL PLATFORM
     </h3>
-    <img class="photo1" src="images/photo-wihout-background.gif" alt="صورة تزينية 1">
+    <img class="photo1" src="images/Youth platform animated.gif" alt="صورة تزينية 1">
 </div>
      
      <div class="stright"></div>
 <div class="main">
-<img  class="photo2" src="images/photo-wihout-background.gif" alt="">
+<img  class="photo2" src="images/youth logo z3ama.png" alt="">
 <div class="text-main">
     <h1 class="h1-text">اطمح ... تعلم ... تقدم</h1>
     <h3>عزز  مهاراتك ورمم نقصك من خلال دورات تربوية مخصصة عن طريق منصة شباب التعليمية وبأسعار رمزية </h3>
@@ -59,10 +59,10 @@
 <div class="contact">
    
     <div class="social-icons">
-        <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
-        <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-        <a href="https://wa.me/05356726514" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
-        <a href="https://t.me/fx_2z" target="_blank"><i class="fa-brands fa-telegram"></i></a>
+        <a href="https://www.facebook.com/profile.php?id=61581457526142&mibextid=ZbWKwL" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
+        <a href="https://www.instagram.com/youthe_learningplatform?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+        <a   target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+        <a href="https://t.me/+963951635332" target="_blank"><i class="fa-brands fa-telegram"></i></a>
     </div>
 </div>
 <footer>
