--- a/register.html
+++ b/register.html
@@ -19,8 +19,8 @@
     <p style="font-size: 20px;">
       التواصل على رقم 
       <div class="social-icons">
-        <a href="https://t.me/fx_2z" target="_blank">تلجرام<i class="fa-brands fa-telegram"></i></a>
-        أو <a href="https://wa.me/05356726514" target="_blank">واتساب<i class="fa-brands fa-whatsapp"></i></a>.
+        <a href="https://t.me/+963951635332"  target="_blank">تلجرام<i class="fa-brands fa-telegram"></i></a>
+        أو <a href="https://wa.me/+963951635332" target="_blank">واتساب<i class="fa-brands fa-whatsapp"></i></a>.
       </div>
     </p>
     <p style="font-size: 20px;">وإرسال المعلومات المطلوبة (الاسم الثلاثي، الصف، المنطقة)</p>
@@ -28,10 +28,11 @@
 
   <div style="cursor: pointer;" class="step " id="step2">
     <h2>الخطوة 2</h2>
-    <p style="font-size: 20px;">دفع الرسوم المطلوبة عبر <strong>شام كاش</strong> (5 دولار للشهر كاملاً) وإعلام المؤسسة بذلك
-    <br>
-       اضغط لعرض التفاصيل
+    <p style="font-size: 20px;">دفع الرسوم المطلوبة عبر <strong>شام كاش</strong> (5 دولار للشهر كاملاً) وإعلام المؤسسة بذلك.
+      <br>
+  اضغط لعرض التفاصيل 
     </p>
+
   </div>
 </div>
 
@@ -52,7 +53,6 @@
     </div>
   </div>
 </div>
-
 
 
   <script src="script.js"></script>
