--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-    <meta charset="UTF-8">
+     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>من نحن</title>
     <link rel="stylesheet" href="style.css">
@@ -21,10 +21,10 @@
 <div class="contact">
     <h3>تواصل معنا</h3>
     <div class="social-icons">
-        <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
-        <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-        <a href="https://wa.me/05356726514" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
-        <a href="https://t.me/fx_2z" target="_blank"><i class="fa-brands fa-telegram"></i></a>
+        <a href="https://www.facebook.com/profile.php?id=61581457526142&mibextid=ZbWKwL" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
+        <a href="https://www.instagram.com/youthe_learningplatform?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+        <a href="https://wa.me/+963951635332" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+        <a href="https://t.me/+963951635332" target="_blank"><i class="fa-brands fa-telegram"></i></a>
     </div>
 </div>
 
